--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-switch": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
