--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.2.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-switch": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.3.1",
@@ -24,6 +25,7 @@
     "@vercel/analytics": "^1.0.2",
     "cheerio": "^1.0.0-rc.12",
     "dom-parser": "^0.1.6",
+    "emoji-picker-react": "^4.5.1",
     "framer-motion": "^10.16.3",
     "jsdom": "^22.1.0",
     "ky": "^0.33.3",
