--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "@vercel/analytics": "^1.0.2",
+    "canvas": "^2.11.2",
+    "canvg": "^4.0.1",
     "cheerio": "^1.0.0-rc.12",
     "dom-parser": "^0.1.6",
     "emoji-picker-react": "^4.5.1",
