--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
     "@hookform/resolvers": "^3.2.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.0.0",
@@ -32,6 +33,8 @@
     "dom-parser": "^0.1.6",
     "emoji-picker-react": "^4.5.1",
     "framer-motion": "^10.16.3",
+    "inter-ui": "^3.19.3",
+    "jotai": "^2.4.2",
     "jsdom": "^22.1.0",
     "ky": "^0.33.3",
     "next": "^13.4.2",
@@ -40,11 +43,13 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-input-emoji": "^5.6.4",
     "react-youtube": "^10.1.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.1.0",
     "@types/eslint": "^8.37.0",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.0",
