--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ky": "^0.33.3",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
