--- a/package.json
+++ b/package.json
@@ -38,9 +38,16 @@
     "jotai": "^2.4.2",
     "jsdom": "^22.1.0",
     "ky": "^0.33.3",
+    "metadata-scraper": "^0.2.61",
+    "metascraper": "^5.37.1",
+    "metascraper-image": "^5.37.1",
+    "metascraper-logo-favicon": "^5.37.1",
+    "metascraper-title": "^5.37.1",
+    "metascraper-url": "^5.37.1",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "node-fetch": "^3.3.2",
+    "open-graph-scraper": "^6.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
@@ -48,6 +55,7 @@
     "react-input-emoji": "^5.6.4",
     "react-youtube": "^10.1.0",
     "superjson": "1.12.2",
+    "url-metadata": "^3.3.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
