testing ddos bypass

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "inter-ui": "^3.19.3",
     "jotai": "^2.4.2",
     "jsdom": "^22.1.0",
+    "jsesc": "^3.0.2",
     "ky": "^0.33.3",
     "metadata-scraper": "^0.2.61",
     "metascraper": "^5.37.1",
@@ -48,6 +49,9 @@
     "next-auth": "^4.22.1",
     "node-fetch": "^3.3.2",
     "open-graph-scraper": "^6.3.0",
+    "puppeteer": "^21.3.8",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
@@ -62,6 +66,7 @@
     "@swc-jotai/react-refresh": "^0.1.0",
     "@types/eslint": "^8.37.0",
     "@types/jsdom": "^21.1.1",
+    "@types/jsesc": "^3.0.1",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
