--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "metascraper-url": "^5.37.1",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
     "open-graph-scraper": "^6.3.0",
     "puppeteer": "^21.3.8",
