--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@geist-ui/core": "^2.3.8",
     "@hookform/resolvers": "^3.2.0",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/bundle-analyzer": "^14.0.1",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.4",
