--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.10.1",
     "react-input-emoji": "^5.6.4",
     "react-youtube": "^10.1.0",
