--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@trpc/server": "^10.26.0",
     "@vercel/analytics": "^1.0.2",
     "browserless": "^10.2.0",
+    "chrome-aws-lambda": "^10.1.0",
     "emoji-picker-react": "^4.5.1",
     "framer-motion": "^10.16.3",
     "html-get": "^2.13.8",
@@ -49,6 +50,7 @@
     "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
     "puppeteer": "^21.5.0",
+    "puppeteer-core": "^21.5.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "18.2.0",
