--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@geist-ui/core": "^2.3.8",
     "@hookform/resolvers": "^3.2.0",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^14.0.3",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.4",
@@ -29,6 +29,7 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "@vercel/analytics": "^1.0.2",
+    "@vercel/og": "^0.5.20",
     "emoji-picker-react": "^4.5.1",
     "framer-motion": "^10.16.3",
     "inter-ui": "^3.19.3",
