--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@hookform/resolvers": "^3.2.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^14.0.3",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.6.0",
+    "@prisma/extension-accelerate": "^0.6.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dialog": "^1.0.4",
