--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
-    "@vercel/analytics": "^1.0.2",
     "@vercel/og": "^0.5.20",
+    "@vercel/speed-insights": "^1.0.7",
     "emoji-picker-react": "^4.5.1",
     "framer-motion": "^10.16.3",
     "inter-ui": "^3.19.3",
