--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.12.0",
     "superjson": "1.12.2",
+    "three": "^0.162.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -58,6 +59,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/three": "^0.162.0",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "autoprefixer": "^10.4.14",
