--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.45.4",
     "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.12.0",
+    "sonner": "^1.4.3",
     "superjson": "1.12.2",
     "three": "^0.162.0",
     "zod": "^3.21.4"
