--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/og": "^0.5.20",
     "@vercel/speed-insights": "^1.0.7",
     "emoji-mart": "^5.5.2",
